Updated content to act as a starting baseline for website

--- a/font-awesome-4.1.0/css/font-awesome.css
+++ b/font-awesome-4.1.0/css/font-awesome.css
@@ -799,6 +799,9 @@
 .fa-envelope:before {
   content: "\f0e0";
 }
+.fa-email:before {
+  content: "\f0e0";
+}
 .fa-linkedin:before {
   content: "\f0e1";
 }
