--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,13 +15,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">  
             	<li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="#about">About Us</a>
                 </li>            
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="#services">What We Do</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="#contact">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -39,7 +39,8 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="intro-message">
-						<h1>{{ page.title }}</h1>
+						<!-- <h1>{{ page.title }}</h1> -->
+                        <h1>Welcome<br />to<br />XNOR Labs</h1>
 					</div>
 				</div>
 			</div>
