Added logo and changed wording

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
               <br/><br/>
               <h2>About Us</h2>
               <br/>
-                <p>We are an agile company that specializes in custom hardware and software.</p>
+                <p>We specialize in low size, weight, and power (SWaP) embedded hardware and software solutions.</p>
                 <br/>
               </div>
         </div>
