--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#home">{{ site.title }}</a>
+            <a class="navbar-brand page-scroll" href="#home"><img class="img-responsive" src="img/logo_small.png" alt=""></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -40,7 +40,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<!-- <h1>{{ page.title }}</h1> -->
-                        <h1>Welcome<br />to<br />XNOR Labs</h1>
+                        <h1>Welcome<br />to<br /><img class="img-responsive" src="img/logo_large.png" alt=""></h1>
 					</div>
 				</div>
 			</div>
