--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,7 +40,7 @@
 				<div class="col-lg-12">
 					<div class="intro-message">
 						<!-- <h1>{{ page.title }}</h1> -->
-                        <h1>Welcome<br />to<br /><img class="img-responsive" src="img/logo_large.png" alt=""></h1>
+                        <h1>Welcome<br />to<br /></h1><br /><img width="50%" src="img/logo_alt.png" alt="">
 					</div>
 				</div>
 			</div>
